@@ -3,10 +3,11 @@ description = Access control list API. Has no features on its own.
 core = 7.x
 package = Access control
 
+files[] = tests/acl.test
 
-; Information added by drupal.org packaging script on 2011-11-26
-version = "7.x-1.0"
+; Information added by Drupal.org packaging script on 2015-08-26
+version = "7.x-1.1"
 core = "7.x"
 project = "acl"
-datestamp = "1322308236"
+datestamp = "1440633240"
 
